Bug 1268160: Assert that PostIdleTask is only used on the main thread. r=jld